[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/eim/Interface.gd" type="Script" id=1]
[ext_resource path="res://addons/eim/ui/EIMGroups/EIMGroups.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/eim/ui/GroupUserInputMap/GroupUserInputMap.tscn" type="PackedScene" id=3]

[node name="Interface" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="UnenabledUI" type="MarginContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="UnenabledUI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1912.0
margin_bottom = 1072.0

[node name="Project" type="HBoxContainer" parent="UnenabledUI/VBC"]
margin_right = 1904.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UnenabledUI/VBC/Project"]
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = "Project Name:"

[node name="LineEdit" type="LineEdit" parent="UnenabledUI/VBC/Project"]
margin_left = 95.0
margin_right = 351.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 0 )
caret_blink = true

[node name="Enable" type="Button" parent="UnenabledUI/VBC/Project"]
margin_left = 355.0
margin_right = 437.0
margin_bottom = 24.0
disabled = true
text = "Enable EIM"

[node name="HSeparator" type="HSeparator" parent="UnenabledUI/VBC"]
margin_top = 28.0
margin_right = 1904.0
margin_bottom = 32.0

[node name="UnenabledMsg" type="RichTextLabel" parent="UnenabledUI/VBC"]
margin_top = 36.0
margin_right = 1904.0
margin_bottom = 51.0
bbcode_enabled = true
bbcode_text = "[color=#ffaa00]Extended Input Manager[/color] requires the addition of special settings to be added to the Godot Project file. These special settings will be grouped together under the given project name. The original [color=aqua]project.godot[/color] file will be backed up as [color=aqua]project_original.godot[/color]"
text = "Extended Input Manager requires the addition of special settings to be added to the Godot Project file. These special settings will be grouped together under the given project name. The original project.godot file will be backed up as project_original.godot"
fit_content_height = true
scroll_active = false

[node name="EnabledUI" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="EnabledUI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1912.0
margin_bottom = 1072.0

[node name="TopBar" type="HBoxContainer" parent="EnabledUI/VBC"]
margin_right = 1904.0
margin_bottom = 20.0

[node name="SaveProjSettings" type="Button" parent="EnabledUI/VBC/TopBar"]
margin_right = 96.0
margin_bottom = 20.0
text = "Save Settings"

[node name="Spacer" type="Control" parent="EnabledUI/VBC/TopBar"]
margin_left = 100.0
margin_right = 1792.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="DisableEIM" type="Button" parent="EnabledUI/VBC/TopBar"]
margin_left = 1796.0
margin_right = 1904.0
margin_bottom = 20.0
text = "Deactivate EIM"

[node name="HSeparator" type="HSeparator" parent="EnabledUI/VBC"]
margin_top = 24.0
margin_right = 1904.0
margin_bottom = 28.0

[node name="EIMGroups" parent="EnabledUI/VBC" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 1904.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="EnabledUI/VBC"]
margin_top = 546.0
margin_right = 1904.0
margin_bottom = 550.0

[node name="GroupUserInputMap" parent="EnabledUI/VBC" instance=ExtResource( 3 )]
margin_top = 554.0
margin_right = 1904.0
margin_bottom = 1064.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="UnenabledUI/VBC/Project/LineEdit" to="." method="_on_Project_LineEdit_text_changed"]
[connection signal="pressed" from="UnenabledUI/VBC/Project/Enable" to="." method="_on_Project_Enable_pressed"]
[connection signal="pressed" from="EnabledUI/VBC/TopBar/SaveProjSettings" to="." method="_on_save_project_settings_pressed"]
[connection signal="pressed" from="EnabledUI/VBC/TopBar/DisableEIM" to="." method="_on_disable_eim_pressed"]
[connection signal="group_selected" from="EnabledUI/VBC/EIMGroups" to="EnabledUI/VBC/GroupUserInputMap" method="set_group_name"]
